cargo-features = ["workspace-inheritance"]

[package]
name = "hyperlane-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
ethers.workspace = true
eyre.workspace = true
hyperlane-base = { path = "../hyperlane-base" }
hyperlane-core = { path = "../hyperlane-core" }
hyperlane-ethereum = { path = "../chains/hyperlane-ethereum" }
log.workspace = true
pretty_env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
